--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -59,9 +59,12 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-color:cornflowerblue;
 }
+
+
 .footer {
   position: absolute;
   bottom: 0;
