--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -31,7 +31,7 @@
                 @Html.DisplayNameFor(model => model.gender)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Trainer)
+                @Html.DisplayNameFor(model => model.Trainer.trainerName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Membership)
@@ -70,7 +70,6 @@
                 <a asp-action="Edit" asp-route-id="@item.UserId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.UserId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.UserId">Delete</a>
-                <a asp-action="scheduleDetails" asp-route-id="@item.UserId">View Schedule</a>
             </td>
         </tr>
 }
