Done with Authentication and authorisation

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,9 +4,51 @@
 
 
 
-<body style="color:lightskyblue">
+<body style="color:darkseagreen" class="bcimg">
     <div class="text-center">
-        <h1 class="display-4">Welcome to Georgian Gym</h1>
+        <h1 class="display-4"><i>Welcome to Georgian Gym</i></h1>
+        <p style="color:darkcyan">
+            The Georgian Gym's purpose is to give every Canadian the opportunity to live a fit and healthy good life.
+            Georgian Gym makes high quality fitness affordable and provides more Canadians the opportunity to achieve
+            their health and fitness goals.
+        </p>
+        <div class="card">
+            <img src="~/img/Basic-Membership.jpg-1324481.png" style="width:100%">
+            <div class="container">
+                <h4><b>Basic</b></h4>
+                <ul>
+                    <li>NEW! No Commitment Period</li>
+                    <li>Access to ONE location</li>
+                    <li>Virtual Fitness and Virtual Cycling**</li>
+                    <li>FREE 30-Minute Express CircuitTM</li>
+                    <li>Price: $20/biweekly</li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <img src="~/img/twss2-prem-go_thumb.png" style="width:100%">
+            <div class="container">
+                <h4><b>Premium</b></h4>
+                <ul>
+                    <li>NEW! No Commitment Period</li>
+                    <li>Access to ONE location</li>
+                    <li>Virtual Fitness and Virtual Cycling**</li>
+                    <li>FREE 30-Minute Express CircuitTM</li>
+                    <li>FREE tanning***</li>
+                    <li>FREE unlimited massage chair use***</li>
+                    <li>FREE gym bag</li>
+                    <li>1/2 price cooler drinks**</li>
+                    <li>FREE unlimited hydro massage bed use***</li>
+                    <li>Price: $50/biweekly</li>
+                </ul>
+            </div>
+        </div>
     </div>
+
 </body>
+
+
+
+
+
 
