--- a/Views/Trainers/Index.cshtml
+++ b/Views/Trainers/Index.cshtml
@@ -5,10 +5,10 @@
 }
 
 <h1>Trainers</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (User.IsInRole("Administrator"))
+{ <p>
+        <a asp-action="Create">Create New</a>
+    </p>}
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -25,23 +25,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.trainerName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.gender)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.trainerType)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.TrainerId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TrainerId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TrainerId">Delete</a>
-            </td>
-        </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.trainerName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.gender)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.trainerType)
+                </td>
+                @if (User.IsInRole("Administrator"))
+                {
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.TrainerId">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.TrainerId">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.TrainerId">Delete</a>
+                    </td>
 }
+            </tr>
+        }
     </tbody>
 </table>
