--- a/Views/Memberships/Index.cshtml
+++ b/Views/Memberships/Index.cshtml
@@ -5,10 +5,10 @@
 }
 
 <h1>Memberships</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (User.IsInRole("Administrator"))
+{<p>
+        <a asp-action="Create">Create New</a>
+    </p>}
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -25,23 +25,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.type)
-            </td>
-            <td class=" text-right">
-                @Html.DisplayFor(modelItem => item.price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.description)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MembershipId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MembershipId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MembershipId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.type)
+                </td>
+                <td class=" text-right">
+                    @Html.DisplayFor(modelItem => item.price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.description)
+                </td>
+                @if (User.IsInRole("Administrator"))
+                {
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.MembershipId">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.MembershipId">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.MembershipId">Delete</a>
+                    </td>
+                }
+            </tr>
+        }
     </tbody>
 </table>
