--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,44 +4,69 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Georgian Gym</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-darkly.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-darkly.css" />
+    <link rel="stylesheet" href="~/css/sheet.css"/>
 </head>
 
 <body>
     <header style='background: crimson'>
         <nav style='background: crimson' class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GeorgianGym</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+            <div>
+                <a class="navbar-brand"  asp-area="" asp-controller="Home" asp-action="Index"><b><span style="font-size:17px" class="material-icons">
+    fitness_center
+</span><i class="brand">Georgian Gym</i></b></a>
+
+                <div style="display:inline-block" class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse navIt">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><span  style="font-size:17px" class="material-icons">
+    home
+</span><i>Home</i></a>
                         </li>
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index"><span style="font-size:17px" class="material-icons">
+    account_box
+</span><i>Users</i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Schedules" asp-action="Index"><span style="font-size:17px" class="material-icons">
+    calendar_today
+</span><i>Schedules</i></a>
+                            </li>
+                        }
                         @if (User.Identity.IsAuthenticated)
-                        { <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trainers" asp-action="Index">Trainers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Memberships" asp-action="Index">Memberships</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Schedules" asp-action="Index">Schedules</a>
-                        </li>
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Trainers" asp-action="Index"><span style="font-size:17px" class="material-icons">
+    supervised_user_circle
+</span><i>Trainers</i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Memberships" asp-action="Index"><span style="font-size:17px" class="material-icons">
+    card_membership
+</span><i>Memberships</i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index"><span style="font-size:17px" class="material-icons">
+    shop_two
+</span><i>Products</i></a>
+                            </li>
+
                         }
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Services" asp-action="Index"><i style="font-size:17px" class="material-icons">store</i><i>Services & Products</i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy"><span style="font-size:17px" class="material-icons">
+    lock
+</span><i>Privacy</i></a>
                         </li>
                     </ul>
                 </div>
@@ -54,10 +79,10 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020  Tanupreet Kaur #200440642  Server side scripting COMP2084  <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+    <footer style="text-align:center">
+  
+            &copy; <b><i>2020 TanupreetKaur #200440642 ServerSideScripting(COMP2084)</i></b><a asp-area="" asp-controller="Home" asp-action="Privacy"><i><b>Privacy</b></i></a>
+   
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
