--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -28,11 +28,15 @@ a {
 -------------------------------------------------- */
 html {
   font-size: 14px;
+  font-style:italic;
 }
 @media (min-width: 768px) {
   html {
     font-size: 16px;
   }
+}
+.h1{
+    font-style:italic;
 }
 
 .border-top {
@@ -58,12 +62,6 @@ html {
   min-height: 100%;
 }
 
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-    background-color:cornflowerblue;
-}
-
 
 .footer {
   position: absolute;
@@ -72,3 +70,4 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
